--- a/index.html
+++ b/index.html
@@ -39,7 +39,28 @@
         </header>
 
 
-        <!-- Header -->
+        <!-- Slider -->
+        <div class="slider">
+            <div class="container">
+
+                <div class="slider-text">
+                    <p class="slider-title">
+                        Долго, дорого, скрупулезно.
+                    </p>
+                    <p class="slider-subtitle">
+                        Математически выверенный дизайн<br> для вашего сайта или мобильного приложения.
+                    </p>
+
+                    <a class="btn" href="#">Узнать больше</a>
+                 </div>
+
+            <img class="slider-image" src="img/slide1.png">
+
+            
+
+
+            </div> <!-- /container -->
+        </div> <!-- /slider -->
     </div> <!-- /page -->
 
 </body>
