Сверстал раздел продукты

--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
                     <p class="slider-title">
                         Долго, дорого, скрупулезно.
                     </p>
+
                     <p class="slider-subtitle">
                         Математически выверенный дизайн<br> для вашего сайта или мобильного приложения.
                     </p>
@@ -55,12 +56,43 @@
                  </div>
 
             <img class="slider-image" src="img/slide1.png">
-
-            
-
-
             </div> <!-- /container -->
         </div> <!-- /slider -->
+
+
+         <!-- Products -->
+         <section class="products">
+             <h2 class="visually-hidden">Наши продукты</h2>
+             <div class="container">
+                 <ul class="products-list">
+                     <li class="products-item">
+                        <img class="products-img" src="img/illustration-1.png" alt="">
+                        <h3 class="product-title">Веб-сайты</h3>
+                        <p class="product-subtitle">Мир никогда не будет прежним после того как увидит ваш сайт!</p>
+                        <a class="btn product-btn" href="#">Заказать</a>
+                     </li>
+
+                     <li class="products-item">
+                        <img class="products-img" src="img/illustration-2.png" alt="">
+                        <h3 class="product-title">Приложения</h3>
+                        <p class="product-subtitle">Покорите топ-10 приложений в AppStore и Google Play</p>
+                        <a class="btn product-btn product-btn-green" href="#">Заказать</a>
+                     </li>
+
+                     <li class="products-item">
+                        <img class="products-img" src="img/illustration-3.png" alt="">
+                        <h3 class="product-title">Презентации</h3>
+                        <p class="product-subtitle">Вы даже не подозреваете, насколько вы изумительны!</p>
+                        <a class="btn product-btn product-btn-yellow" href="#">Заказать</a>
+                     </li>
+
+                 </ul>
+             </div>
+
+
+         </section>
+        
+
     </div> <!-- /page -->
 
 </body>
