--- a/index.html
+++ b/index.html
@@ -17,8 +17,9 @@
 
         <header class="main-header">
             <div class="container">
-                <div class="header-logo"> 
-                    <a class="logo-link" href="index.html"><img class="logo-content" src="img/svg/header-logo.svg" alt=""></a>
+                <div class="header-logo">
+                    <a class="logo-link" href="index.html"><img class="logo-content" src="img/svg/header-logo.svg"
+                            alt=""></a>
                 </div>
 
                 <nav class="main-nav">
@@ -33,7 +34,7 @@
                 <div class="user-menu">
                     <a class="user-link" href="#">Корзина</a>
                 </div>
-                
+
             </div> <!-- /container -->
 
         </header>
@@ -53,45 +54,87 @@
                     </p>
 
                     <a class="btn" href="#">Узнать больше</a>
-                 </div>
+                </div>
 
-            <img class="slider-image" src="img/slide1.png">
+                <img class="slider-image" src="img/slide1.png">
             </div> <!-- /container -->
         </div> <!-- /slider -->
 
 
-         <!-- Products -->
-         <section class="products">
-             <h2 class="visually-hidden">Наши продукты</h2>
-             <div class="container">
-                 <ul class="products-list">
-                     <li class="products-item">
+        <!-- Products -->
+        <section class="products">
+            <h2 class="visually-hidden">Наши продукты</h2>
+            <div class="container">
+                <ul class="products-list">
+                    <li class="products-item">
                         <img class="products-img" src="img/illustration-1.png" alt="">
                         <h3 class="product-title">Веб-сайты</h3>
                         <p class="product-subtitle">Мир никогда не будет прежним после того как увидит ваш сайт!</p>
                         <a class="btn product-btn" href="#">Заказать</a>
-                     </li>
+                    </li>
 
-                     <li class="products-item">
+                    <li class="products-item">
                         <img class="products-img" src="img/illustration-2.png" alt="">
                         <h3 class="product-title">Приложения</h3>
                         <p class="product-subtitle">Покорите топ-10 приложений в AppStore и Google Play</p>
                         <a class="btn product-btn product-btn-green" href="#">Заказать</a>
-                     </li>
+                    </li>
 
-                     <li class="products-item">
+                    <li class="products-item">
                         <img class="products-img" src="img/illustration-3.png" alt="">
                         <h3 class="product-title">Презентации</h3>
                         <p class="product-subtitle">Вы даже не подозреваете, насколько вы изумительны!</p>
                         <a class="btn product-btn product-btn-yellow" href="#">Заказать</a>
-                     </li>
+                    </li>
 
-                 </ul>
-             </div>
+                </ul>
+            </div>
+        </section>
 
 
-         </section>
-        
+        <!-- About -->
+        <section class="about">
+            <div class="container">
+
+                <h2 class="visually-hidden">О нас</h2>
+                <div class="left-column">
+                    <p class="about-title">Мы — маленькая, но гордая дизайн-студия из Краснодара.</p>
+                    <p class="about-subtitle">Исповедуем принципы минимализма и чистоты. Ставим математический расчет
+                        превыше креатива. Работаем не покладая рук, как роботы.</p>
+                    <p class="list-title">Выполняем заказы на разработку:</p>
+                    <ul class="about-list">
+                        <li class="list-item">Веб-сайтов любой сложности</li>
+                        <li class="list-item">Мобильных приложений для iOS и Android</li>
+                        <li class="list-item">Слайдшоу и видео для корпоративных презентаций</li>
+                    </ul>
+                </div> <!-- / left-column -->
+
+                <div class="rigth-column">
+                    <img src="img/nerds-illustration.png" alt="">
+                    <p class="right-column-title">с 2004 года Любим точность во всем:</p>
+                    <div class="right-column-flex">
+                        <div class="right-column-item">
+                            <p class="right-column-percent">146<span class="percent">%</span></p>
+                            <p class="right-column-text">Уровень самоотдачи</p>
+                        </div>
+
+                        <div class="right-column-item">
+                            <p class="right-column-percent">100<span class="percent">%</span></p>
+                            <p class="right-column-text">Соблюдение сроков</p>
+                        </div>
+
+                        <div class="right-column-item">
+                            <p class="right-column-percent">50<span class="percent">%</span></p>
+                            <p class="right-column-text">Минимальная предоплата</p>
+                        </div>
+                    </div>
+                </div> <!-- / right-column -->
+
+            </div> <!-- / container -->
+        </section> <!-- / about -->
+
+
+
 
     </div> <!-- /page -->
 
