Сверстал раздел "Пратнёры"

--- a/index.html
+++ b/index.html
@@ -134,6 +134,17 @@
         </section> <!-- / about -->
 
 
+        <!-- Partners -->
+        <section class="partners">
+            <div class="container">
+                <div class="partners-item"><img class="partners-logo" src="img/logo-1.png" alt=""> </div>
+                <div class="partners-item"><img class="partners-logo" src="img/logo-2.png" alt=""> </div>
+                <div class="partners-item"><img class="partners-logo" src="img/logo-3.png" alt=""> </div>
+                <div class="partners-item"><img class="partners-logo" src="img/logo-4.png" alt=""> </div>
+            </div>
+        </section>
+
+
 
 
     </div> <!-- /page -->
