Вставил интерактивную карту

--- a/index.html
+++ b/index.html
@@ -136,6 +136,7 @@
 
         <!-- Partners -->
         <section class="partners">
+            <h2 class="visually-hidden">Наши партнёры</h2>
             <div class="container">
                 <div class="partners-item"><img class="partners-logo" src="img/logo-1.png" alt=""> </div>
                 <div class="partners-item"><img class="partners-logo" src="img/logo-2.png" alt=""> </div>
@@ -145,9 +146,16 @@
         </section>
 
 
-
-
+        <!-- Map -->
+        <div class="modal modal-map">
+            <script type="text/javascript" charset="utf-8" async
+                src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3A4cca43b505d388bc6bf433c1f1ba45a8e33789dd7a875e8c79e1adbceae7cd82&amp;width=100%25&amp;height=485&amp;lang=ru_RU&amp;scroll=true"></script>
+        </div>
     </div> <!-- /page -->
+
+    <footer class="main-footer">
+
+    </footer>
 
 </body>
 
