Сверстал модальное окно с адресом

--- a/index.html
+++ b/index.html
@@ -146,11 +146,20 @@
         </section>
 
 
-        <!-- Map -->
-        <div class="modal modal-map">
+        <!-- Modal -->
+        <div class="popaps">
+
+        <div class="modal-map">
             <script type="text/javascript" charset="utf-8" async
                 src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3A4cca43b505d388bc6bf433c1f1ba45a8e33789dd7a875e8c79e1adbceae7cd82&amp;width=100%25&amp;height=485&amp;lang=ru_RU&amp;scroll=true"></script>
         </div>
+        <div class="modal-adress">
+            <h2 class="adress-title">NЁRDS DESIGN STUDIO</h2>
+            <address class="adress-text">191186, Санкт-Петербург,<br>ул. Б. Конюшенная, д. 19/8</address>
+               <address class="adress-phone">тел. <a class="phone-link" href="tel:+78122757575">+7 (812) 275-75-75</a></address> 
+                <a class="btn modal-btn" href="#">Напишите нам</a>
+            </div>
+    </div> <!-- / popaps -->
     </div> <!-- /page -->
 
     <footer class="main-footer">
