Поставил статичную картинку под интерактивную карту

--- a/index.html
+++ b/index.html
@@ -149,23 +149,25 @@
         <!-- Modal -->
         <div class="popaps">
 
-        <div class="modal-map">
-            <script type="text/javascript" charset="utf-8" async
-                src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3A4cca43b505d388bc6bf433c1f1ba45a8e33789dd7a875e8c79e1adbceae7cd82&amp;width=100%25&amp;height=485&amp;lang=ru_RU&amp;scroll=true"></script>
-        </div>
-        <div class="modal-adress">
-            <h2 class="adress-title">NЁRDS DESIGN STUDIO</h2>
-            <address class="adress-text">191186, Санкт-Петербург,<br>ул. Б. Конюшенная, д. 19/8</address>
-               <address class="adress-phone">тел. <a class="phone-link" href="tel:+78122757575">+7 (812) 275-75-75</a></address> 
+            <div class="modal-map">
+                <img class="modal-map-img" src="img/map.jpg" alt="">
+                <script class="script" type="text/javascript" charset="utf-8" async
+                    src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3A4cca43b505d388bc6bf433c1f1ba45a8e33789dd7a875e8c79e1adbceae7cd82&amp;width=100%25&amp;height=415&amp;lang=ru_RU&amp;scroll=true"></script>
+            </div>
+            <div class="modal-adress">
+                <h2 class="adress-title">NЁRDS DESIGN STUDIO</h2>
+                <address class="adress-text">191186, Санкт-Петербург,<br>ул. Б. Конюшенная, д. 19/8</address>
+                <address class="adress-phone">тел. <a class="phone-link" href="tel:+78122757575">+7 (812) 275-75-75</a>
+                </address>
                 <a class="btn modal-btn" href="#">Напишите нам</a>
             </div>
-    </div> <!-- / popaps -->
+        </div> <!-- / popaps -->
     </div> <!-- /page -->
 
     <footer class="main-footer">
         <div class="container">
             <div class="social">
-                <a class="social-link" href="#"> <svg class="social-icon social-icon-vk" version="1.1" id="Layer_1"
+                <a class="social-link" href="https://vk.com"> <svg class="social-icon social-icon-vk" version="1.1" id="Layer_1"
                         xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
                         width="26px" height="15px" viewBox="0 0 26 15" enable-background="new 0 0 26 15"
                         xml:space="preserve">
@@ -181,14 +183,14 @@
                c0.224-0.24,0.214-0.691,0.214-0.691S15.172,11.82,16.138,11.51z" />
                     </svg>
                 </a>
-                <a class="social-link" href="#"> <svg class="social-icon social-icon-fb" version="1.1" id="Layer_2"
+                <a class="social-link" href="https://www.facebook.com"> <svg class="social-icon social-icon-fb" version="1.1" id="Layer_2"
                         xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
                         width="12px" height="22px" viewBox="0 0 12 22" enable-background="new 0 0 12 22"
                         xml:space="preserve">
                         <path fill="#FFFFFF" d="M12,4V0H8C5.791,0,4,1.791,4,4v4H0v4h4v10h4V12h4V8H8V4H12z" />
                     </svg>
                 </a>
-                <a class="social-link" href="#"> <svg class="social-icon social-icon-insta"
+                <a class="social-link" href="https://www.instagram.com"> <svg class="social-icon social-icon-insta"
                         enable-background="new 0 0 21 21" height="21" viewBox="0 0 21 21" width="21"
                         xmlns="http://www.w3.org/2000/svg">
                         <path
