Сверстал фильтр по особенностям

--- a/index.html
+++ b/index.html
@@ -146,13 +146,16 @@
         </section>
 
 
+    </div> <!-- /page -->
+
+    <footer class="main-footer">
         <!-- Modal -->
         <div class="popaps">
 
             <div class="modal-map">
                 <img class="modal-map-img" src="img/map.jpg" alt="">
                 <script class="script" type="text/javascript" charset="utf-8" async
-                    src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3A4cca43b505d388bc6bf433c1f1ba45a8e33789dd7a875e8c79e1adbceae7cd82&amp;width=100%25&amp;height=415&amp;lang=ru_RU&amp;scroll=true"></script>
+                    src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3A4cca43b505d388bc6bf433c1f1ba45a8e33789dd7a875e8c79e1adbceae7cd82&amp;width=100%25&amp;height=415&amp;lang=ru_RU&amp;scroll=false"></script>
             </div>
             <div class="modal-adress">
                 <h2 class="adress-title">NЁRDS DESIGN STUDIO</h2>
@@ -162,14 +165,12 @@
                 <a class="btn modal-btn" href="#">Напишите нам</a>
             </div>
         </div> <!-- / popaps -->
-    </div> <!-- /page -->
 
-    <footer class="main-footer">
         <div class="container">
             <div class="social">
-                <a class="social-link" href="https://vk.com"> <svg class="social-icon social-icon-vk" version="1.1" id="Layer_1"
-                        xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
-                        width="26px" height="15px" viewBox="0 0 26 15" enable-background="new 0 0 26 15"
+                <a class="social-link" href="https://vk.com"> <svg class="social-icon social-icon-vk" version="1.1"
+                        id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
+                        x="0px" y="0px" width="26px" height="15px" viewBox="0 0 26 15" enable-background="new 0 0 26 15"
                         xml:space="preserve">
                         <path fill="#FFFFFF" fill-opacity="1" d="M16.138,11.51c0.956-0.309,2.18,2.04,3.483,2.939c0.978,0.681,1.727,0.534,1.727,0.534l3.473-0.05
                c0,0,1.815-0.112,0.957-1.554c-0.071-0.12-0.503-1.069-2.585-3.022c-2.177-2.043-1.882-1.712,0.739-5.244
@@ -183,10 +184,10 @@
                c0.224-0.24,0.214-0.691,0.214-0.691S15.172,11.82,16.138,11.51z" />
                     </svg>
                 </a>
-                <a class="social-link" href="https://www.facebook.com"> <svg class="social-icon social-icon-fb" version="1.1" id="Layer_2"
-                        xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
-                        width="12px" height="22px" viewBox="0 0 12 22" enable-background="new 0 0 12 22"
-                        xml:space="preserve">
+                <a class="social-link" href="https://www.facebook.com"> <svg class="social-icon social-icon-fb"
+                        version="1.1" id="Layer_2" xmlns="http://www.w3.org/2000/svg"
+                        xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="12px" height="22px"
+                        viewBox="0 0 12 22" enable-background="new 0 0 12 22" xml:space="preserve">
                         <path fill="#FFFFFF" d="M12,4V0H8C5.791,0,4,1.791,4,4v4H0v4h4v10h4V12h4V8H8V4H12z" />
                     </svg>
                 </a>
