Сверстал фильтры,убрал outline у интерактивных элементов

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                     <ul class="nav-list">
                         <li class="nav-item"> <a class="nav-link" href="#">Студия</a></li>
                         <li class="nav-item"> <a class="nav-link" href="#">Клиенты</a></li>
-                        <li class="nav-item"> <a class="nav-link" href="#">Магазин</a></li>
+                        <li class="nav-item"> <a class="nav-link" href="catalog.html">Магазин</a></li>
                         <li class="nav-item"> <a class="nav-link" href="#">Контакты</a></li>
                     </ul>
                 </nav>
@@ -53,7 +53,7 @@
                         Математически выверенный дизайн<br> для вашего сайта или мобильного приложения.
                     </p>
 
-                    <a class="btn" href="#">Узнать больше</a>
+                    <a class="btn" href="catalog.html">Узнать больше</a>
                 </div>
 
                 <img class="slider-image" src="img/slide1.png">
@@ -138,10 +138,10 @@
         <section class="partners">
             <h2 class="visually-hidden">Наши партнёры</h2>
             <div class="container">
-                <div class="partners-item"><img class="partners-logo" src="img/logo-1.png" alt=""> </div>
-                <div class="partners-item"><img class="partners-logo" src="img/logo-2.png" alt=""> </div>
-                <div class="partners-item"><img class="partners-logo" src="img/logo-3.png" alt=""> </div>
-                <div class="partners-item"><img class="partners-logo" src="img/logo-4.png" alt=""> </div>
+                <div class="partners-item"><a class="partners-link" href="#"><img class="partners-logo" src="img/logo-1.png" alt=""></a></div>
+                <div class="partners-item"><a class="partners-link" href="#"><img class="partners-logo" src="img/logo-2.png" alt=""></a></div>
+                <div class="partners-item"><a class="partners-link" href="#"><img class="partners-logo" src="img/logo-3.png" alt=""></a></div>
+                <div class="partners-item"><a class="partners-link" href="#"><img class="partners-logo" src="img/logo-4.png" alt=""></a></div>
             </div>
         </section>
 
@@ -149,6 +149,8 @@
     </div> <!-- /page -->
 
     <footer class="main-footer">
+
+        
         <!-- Modal -->
         <div class="popaps">
 
