--- a/catalog.html
+++ b/catalog.html
@@ -55,10 +55,10 @@
                             <div class="filter-price">
                                 <h3 class="group-title">Стоимость:</h3>
                                 <div class="group-price-input">
-                                <label class="price-label" for="price-from-input">от</label>
-                                <input class="price-input" id="price-from-input" type="number" placeholder="0">
-                                <label class="price-label" for="price-to-input">до</label>
-                                <input class="price-input" id="price-to-input" type="number" placeholder="15 000">
+                                    <label class="price-label" for="price-from-input">от</label>
+                                    <input class="price-input" id="price-from-input" type="number" placeholder="0">
+                                    <label class="price-label" for="price-to-input">до</label>
+                                    <input class="price-input" id="price-to-input" type="number" placeholder="15 000">
                                 </div>
                             </div>
 
@@ -113,38 +113,164 @@
                             <li class="products-filter-item"><a class="products-filter-link" href="#">по названию</a>
                             </li>
                         </ul>
+                    </div> <!-- products-filter -->
+
+                    <div class="products-cards">
+
+                        <div class="cards-container">
+                            <div class="cards-image">
+                                <object class="image-header" data="img/svg/browser.svg" type="image/svg+xml">
+                                    <img src="img/svg/browser.svg" alt="">
+                                </object>
+                                <object class="image-header image-header-hover" data="img/svg/browser-hover.svg" type="image/svg+xml">
+                                    <img src="img/svg/browser-hover.svg" alt="">
+                                </object>
+
+                                <img class="cards-image-content" src="img/sedona.jpg" alt="">
+                            </div>
+
+                            <div class="cards-description">
+                                <h3 class="description-title">SEDONA</h3>
+                                <p class="description-text">Информационный сайт<br>для туристов</p>
+                                <a class="btn products-cards-btn" href="#">9 900 руб.</a>
+                            </div>
+                        </div>
+
+                        <div class="cards-container">
+                            <div class="cards-image">
+                                <object class="image-header" data="img/svg/browser.svg" type="image/svg+xml">
+                                    <img src="img/svg/browser.svg" alt="">
+                                </object>
+                                <object class="image-header image-header-hover" data="img/svg/browser-hover.svg" type="image/svg+xml">
+                                    <img src="img/svg/browser-hover.svg" alt="">
+                                </object>
+
+                                <img class="cards-image-content" src="img/pink.jpg" alt="">
+                            </div>
+
+                            <div class="cards-description">
+                                <h3 class="description-title">Pink App</h3>
+                                <p class="description-text">Продуктовый лендинг<br>приложения для iOS и Android</p>
+                                <a class="btn products-cards-btn" href="#">9 900 руб.</a>
+                            </div>
+                        </div>
+
+                        <div class="cards-container">
+                            <div class="cards-image">
+                                <object class="image-header" data="img/svg/browser.svg" type="image/svg+xml">
+                                    <img src="img/svg/browser.svg" alt="">
+                                </object>
+                                <object class="image-header image-header-hover" data="img/svg/browser-hover.svg" type="image/svg+xml">
+                                    <img src="img/svg/browser-hover.svg" alt="">
+                                </object>
+
+                                <img class="cards-image-content" src="img/barbershop.jpg" alt="">
+                            </div>
+
+                            <div class="cards-description">
+                                <h3 class="description-title">Barbershop</h3>
+                                <p class="description-text">Сайт салона красоты.<br>Для мужчин, да.</p>
+                                <a class="btn products-cards-btn" href="#">9 900 руб.</a>
+                            </div>
+                        </div>
+
+                        <div class="cards-container">
+                            <div class="cards-image">
+                                <object class="image-header" data="img/svg/browser.svg" type="image/svg+xml">
+                                    <img src="img/svg/browser.svg" alt="">
+                                </object>
+                                <object class="image-header image-header-hover" data="img/svg/browser-hover.svg" type="image/svg+xml">
+                                    <img src="img/svg/browser-hover.svg" alt="">
+                                </object>
+
+                                <img class="cards-image-content" src="img/mishka.jpg" alt="">
+                            </div>
+
+                            <div class="cards-description">
+                                <h3 class="description-title">MISHKA</h3>
+                                <p class="description-text">Интернет-магазин<br>вязаных игрушек</p>
+                                <a class="btn products-cards-btn" href="#">9 900 руб.</a>
+                            </div>
+                        </div>
+
+                        <div class="cards-container">
+                            <div class="cards-image">
+                                <object class="image-header" data="img/svg/browser.svg" type="image/svg+xml">
+                                    <img src="img/svg/browser.svg" alt="">
+                                </object>
+                                <object class="image-header image-header-hover" data="img/svg/browser-hover.svg" type="image/svg+xml">
+                                    <img src="img/svg/browser-hover.svg" alt="">
+                                </object>
+
+                                <img class="cards-image-content" src="img/aplus.jpg" alt="">
+                            </div>
+
+                            <div class="cards-description">
+                                <h3 class="description-title">A Plus</h3>
+                                <p class="description-text">Лендинг курсов повышения<br>квалификации</p>
+                                <a class="btn products-cards-btn" href="#">9 900 руб.</a>
+                            </div>
+                        </div>
+
+                        <div class="cards-container">
+                            <div class="cards-image">
+                                <object class="image-header" data="img/svg/browser.svg" type="image/svg+xml">
+                                    <img src="img/svg/browser.svg" alt="">
+                                </object>
+                                <object class="image-header image-header-hover" data="img/svg/browser-hover.svg" type="image/svg+xml">
+                                    <img src="img/svg/browser-hover.svg" alt="">
+                                </object>
+
+                                <img class="cards-image-content" src="img/kvast.jpg.jpg" alt="">
+                            </div>
+
+                            <div class="cards-description">
+                                <h3 class="description-title">КВАСТ</h3>
+                                <p class="description-text">Промо-сайт производителя<br>крафтового кваса</p>
+                                <a class="btn products-cards-btn" href="#">9 900 руб.</a>
+                            </div>
+                        </div>
                     </div>
-                </section>
-            </div> <!-- / container -->
 
-        </main>
 
-        <footer class="main-footer">
-            <!-- Modal -->
-            <div class="popaps">
+            </div> <!-- products-cards -->
 
-                <div class="modal-map">
-                    <img class="modal-map-img" src="img/map.jpg" alt="">
-                    <script class="script" type="text/javascript" charset="utf-8" async
-                        src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3A4cca43b505d388bc6bf433c1f1ba45a8e33789dd7a875e8c79e1adbceae7cd82&amp;width=100%25&amp;height=415&amp;lang=ru_RU&amp;scroll=false"></script>
-                </div>
-                <div class="modal-adress">
-                    <h2 class="adress-title">NЁRDS DESIGN STUDIO</h2>
-                    <address class="adress-text">191186, Санкт-Петербург,<br>ул. Б. Конюшенная, д. 19/8</address>
-                    <address class="adress-phone">тел. <a class="phone-link" href="tel:+78122757575">+7 (812)
-                            275-75-75</a>
-                    </address>
-                    <a class="btn modal-btn" href="#">Напишите нам</a>
-                </div>
-            </div> <!-- / popaps -->
+    </div>
 
-            <div class="container">
-                <div class="social">
-                    <a class="social-link" href="https://vk.com"> <svg class="social-icon social-icon-vk" version="1.1"
-                            id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
-                            x="0px" y="0px" width="26px" height="15px" viewBox="0 0 26 15"
-                            enable-background="new 0 0 26 15" xml:space="preserve">
-                            <path fill="#FFFFFF" fill-opacity="1" d="M16.138,11.51c0.956-0.309,2.18,2.04,3.483,2.939c0.978,0.681,1.727,0.534,1.727,0.534l3.473-0.05
+    </section> <!-- products -->
+
+
+    </section>
+    </div> <!-- / container -->
+
+    </main>
+
+    <footer class="main-footer">
+        <!-- Modal -->
+        <div class="popaps">
+
+            <div class="modal-map">
+                <img class="modal-map-img" src="img/map.jpg" alt="">
+                <script class="script" type="text/javascript" charset="utf-8" async
+                    src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3A4cca43b505d388bc6bf433c1f1ba45a8e33789dd7a875e8c79e1adbceae7cd82&amp;width=100%25&amp;height=415&amp;lang=ru_RU&amp;scroll=false"></script>
+            </div>
+            <div class="modal-adress">
+                <h2 class="adress-title">NЁRDS DESIGN STUDIO</h2>
+                <address class="adress-text">191186, Санкт-Петербург,<br>ул. Б. Конюшенная, д. 19/8</address>
+                <address class="adress-phone">тел. <a class="phone-link" href="tel:+78122757575">+7 (812)
+                        275-75-75</a>
+                </address>
+                <a class="btn modal-btn" href="#">Напишите нам</a>
+            </div>
+        </div> <!-- / popaps -->
+
+        <div class="container">
+            <div class="social">
+                <a class="social-link" href="https://vk.com"> <svg class="social-icon social-icon-vk" version="1.1"
+                        id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
+                        x="0px" y="0px" width="26px" height="15px" viewBox="0 0 26 15" enable-background="new 0 0 26 15"
+                        xml:space="preserve">
+                        <path fill="#FFFFFF" fill-opacity="1" d="M16.138,11.51c0.956-0.309,2.18,2.04,3.483,2.939c0.978,0.681,1.727,0.534,1.727,0.534l3.473-0.05
            c0,0,1.815-0.112,0.957-1.554c-0.071-0.12-0.503-1.069-2.585-3.022c-2.177-2.043-1.882-1.712,0.739-5.244
            c1.597-2.153,2.236-3.468,2.036-4.028c-0.192-0.539-1.365-0.399-1.365-0.399L20.69,0.713c-0.381,0.001-0.704,0.119-0.851,0.515
            c-0.003,0.004-0.621,1.666-1.445,3.079c-1.741,2.989-2.436,3.148-2.724,2.961c-0.661-0.433-0.494-1.737-0.494-2.664
@@ -154,29 +280,29 @@
            C4.912,0.719,4.562,0.66,4.562,0.66L0.848,0.684c0,0-0.558,0.016-0.763,0.262C-0.097,1.164,0.07,1.614,0.07,1.614
            s2.909,6.881,6.203,10.347c3.02,3.182,6.452,2.971,6.452,2.971h1.555c0,0,0.469-0.054,0.709-0.312
            c0.224-0.24,0.214-0.691,0.214-0.691S15.172,11.82,16.138,11.51z" />
-                        </svg>
-                    </a>
-                    <a class="social-link" href="https://www.facebook.com"> <svg class="social-icon social-icon-fb"
-                            version="1.1" id="Layer_2" xmlns="http://www.w3.org/2000/svg"
-                            xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="12px" height="22px"
-                            viewBox="0 0 12 22" enable-background="new 0 0 12 22" xml:space="preserve">
-                            <path fill="#FFFFFF" d="M12,4V0H8C5.791,0,4,1.791,4,4v4H0v4h4v10h4V12h4V8H8V4H12z" />
-                        </svg>
-                    </a>
-                    <a class="social-link" href="https://www.instagram.com"> <svg class="social-icon social-icon-insta"
-                            enable-background="new 0 0 21 21" height="21" viewBox="0 0 21 21" width="21"
-                            xmlns="http://www.w3.org/2000/svg">
-                            <path
-                                d="m18 0h-15c-1.65 0-3 1.35-3 3v15c0 1.65 1.35 3 3 3h15c1.65 0 3-1.35 3-3v-15c0-1.65-1.35-3-3-3zm-7.5 7c1.93 0 3.5 1.57 3.5 3.5s-1.57 3.5-3.5 3.5-3.5-1.57-3.5-3.5 1.57-3.5 3.5-3.5zm7.5 11h-15v-9h1.181c-.114.482-.181.983-.181 1.5 0 3.59 2.91 6.5 6.5 6.5s6.5-2.91 6.5-6.5c0-.517-.066-1.018-.181-1.5h1.181zm0-11h-4v-4h4z"
-                                fill="#fff" /></svg></a>
-                </div> <!-- / social -->
+                    </svg>
+                </a>
+                <a class="social-link" href="https://www.facebook.com"> <svg class="social-icon social-icon-fb"
+                        version="1.1" id="Layer_2" xmlns="http://www.w3.org/2000/svg"
+                        xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="12px" height="22px"
+                        viewBox="0 0 12 22" enable-background="new 0 0 12 22" xml:space="preserve">
+                        <path fill="#FFFFFF" d="M12,4V0H8C5.791,0,4,1.791,4,4v4H0v4h4v10h4V12h4V8H8V4H12z" />
+                    </svg>
+                </a>
+                <a class="social-link" href="https://www.instagram.com"> <svg class="social-icon social-icon-insta"
+                        enable-background="new 0 0 21 21" height="21" viewBox="0 0 21 21" width="21"
+                        xmlns="http://www.w3.org/2000/svg">
+                        <path
+                            d="m18 0h-15c-1.65 0-3 1.35-3 3v15c0 1.65 1.35 3 3 3h15c1.65 0 3-1.35 3-3v-15c0-1.65-1.35-3-3-3zm-7.5 7c1.93 0 3.5 1.57 3.5 3.5s-1.57 3.5-3.5 3.5-3.5-1.57-3.5-3.5 1.57-3.5 3.5-3.5zm7.5 11h-15v-9h1.181c-.114.482-.181.983-.181 1.5 0 3.59 2.91 6.5 6.5 6.5s6.5-2.91 6.5-6.5c0-.517-.066-1.018-.181-1.5h1.181zm0-11h-4v-4h4z"
+                            fill="#fff" /></svg></a>
+            </div> <!-- / social -->
 
-                <div class="sale">
-                    <p class="sale-title">Давайте дружить, это выгодно!</p>
-                    <p class="sale-text">Скидка 10% для друзей из социальных сетей.</p>
-                </div>
-            </div> <!-- / container -->
-        </footer>
+            <div class="sale">
+                <p class="sale-title">Давайте дружить, это выгодно!</p>
+                <p class="sale-text">Скидка 10% для друзей из социальных сетей.</p>
+            </div>
+        </div> <!-- / container -->
+    </footer>
 
 </body>
 
